# CourseNavigator

./: .dockerignore  .env.demo  .env.example  .env.local  .eslintrc.json  .gitignore  README.md  check_raw_data.py  demo_dataset.json  docker-compose-minimal.yml  docker-compose.override.yml  docker-compose.yml  docker-compose.yml.backup  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  pyproject.toml  redisTicket.md  tailwind.config.js  test_calendar_export.py  test_conflict_detection.py  test_rosters.py  tsconfig.json  tsconfig.tsbuildinfo
data/: cornell_grades.csv  grades.csv  scraper_state.json  spike_results.csv
data/clean/: courses.jsonl
data/cornell_current/: aliases.csv  courses.csv  import_script.cypher  prerequisite_edges.csv
data/degree/: majors_cs_v1.json
data/neo4j/: DEPLOYMENT.md  aliases.csv  courses.csv  import_script.cypher  missing_courses.csv  prerequisite_edges.csv
data/neo4j_import/: aliases.csv  bootstrap.cypher  courses.csv  import_script.cypher  prerequisite_edges.csv
migrations/: 09_requirements.cypher
monitoring/: alert_rules.yml  alertmanager.yml  docker-compose-monitoring.yml  prometheus.yml
python/: Dockerfile
python/cornell_api/: __init__.py  client.py  data_pipeline.py  prerequisite_parser.py
python/data_ingestion/: __init__.py  models.py  neo4j_exporter.py  processor.py  quality_monitor.py  scraper.py  unified_pipeline.py  validation.py
python/gateway/: __init__.py  dependencies.py  main.py  models.py
python/gateway/routes/: calendar_export.py  (+1 more)
python/graph_analysis/: __init__.py  centrality.py  communities.py  graph_context.py  graph_metadata.py  neo4j_loader.py  neo4j_schema.py  pathfinding.py  prereq_parser.py  spike_runner.py  student_filter.py
python/scripts/: analyze_cross_listing_data.py  check_neo4j_data.py  export_schemas.py  final_architecture_analysis.py  test_cornell_integration.py  test_environment.py  test_pipeline.py  test_qdrant_integration.py  test_quality_monitoring.py  test_simplified_cross_listing.py  test_strict_validation.py  verify_simplification.py
python/tests/: __init__.py  conftest.py  test_chaos_rmp_fallback.py  test_chat_integration.py  test_conversation_state.py  test_fetch_sse_auth_fix.py  test_graph_algorithms_service.py  test_json_enforce.py  test_major_requirements_service.py  test_models.py  test_pathfinding.py  test_profiles_api.py  test_provenance.py  test_schedule_fit_service.py  test_sse_integration.py  test_sse_resilience.py  test_student_profile_service.py
scripts/: bench_chat.py  demo_runner.py  k6-golden-path.js  load_requirements.py  run-perf-gate.sh  validate_performance.py
src/__tests__/: api-integration.test.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AdvisorDashboard.tsx  CourseAdvisorChat.tsx  CourseGraphVisualization.tsx  CourseRankings.tsx  CourseSearch.tsx  PrerequisiteChecker.tsx  SemesterPlanner.tsx
src/hooks/: useAPI.ts  useCourseAdvisorChat.ts
src/lib/: course-recommender.ts  graduation-optimizer.ts  semester-planning.ts
src/utils/: fetch-sse.ts  resilient-sse.ts
tests/: __init__.py
tests/unit/: test_token_budget.py
types/: academic-planning.ts  api-schemas.json  api-types.ts
(+37 files in other folders)
